--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
@@ -1,15 +1,9 @@
-.listing-card {
-  background: #f8fbff;
-  padding: 1rem;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
+@use '@atoms/colors/color' as color;
+@use '@base/mixins.scss' as mixins;
 
-.listing-card__image img {
-  width: 220px;
-  border-radius: 8px;
+.listing-card .upper-card {
+  flex-direction: row;
+  gap: 2rem;
 }
 
 .listing-card__content {
@@ -17,9 +11,6 @@
 }
 
 .listing-card__fields {
-  background: #76c7f2;
-  padding: 0.5rem;
-  border-radius: 4px;
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
