Updated the CTA Card with New Button

--- a/web/themes/custom/govcon/components/molecules/announcement-card/announcement-card.twig
+++ b/web/themes/custom/govcon/components/molecules/announcement-card/announcement-card.twig
@@ -16,7 +16,7 @@
       link_url: link.url,
       src_target: link.target,
       label: link.content,
-      modifier: "ghost icon--arrow-right icon-after " ~ link.classes 
+      modifier: "button-with-icon icon--arrow-right icon-after " ~ link.classes 
     } %}
   {% endif %}
 </div>
