--- a/web/themes/custom/govcon/components/style.scss
+++ b/web/themes/custom/govcon/components/style.scss
@@ -1,4 +1,5 @@
 @use "./gutenberg/gutenberg-style.scss";
 @use "@organisms/announcement-listing/announcement-listing.scss";
+@use "@molecules/listing-card/listing-card.scss";
 @use "@organisms/header/header.scss";
 @use "@organisms/footer/footer.scss";
