--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.twig
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.twig
@@ -6,7 +6,7 @@
       </div>
     {% endif %}
 
-      <div class="listing-card__content">
+      <div class="text-left">
         <h3 class="listing-card__heading">
           {{ heading }}
         </h3>
@@ -24,27 +24,21 @@
         {% endif %}
 
         {% if link %}
-          {% include "@atoms/link/link.twig" with {
-        link_url: link.url,
-        link_title: link.title,
-        link_target: link.target,
-        link_content: link.content,
-        link_classes: link.classes|merge(["listing-card__cta", "icon--arrow-right", "icon--after"])
-      } %}
+          {% include "@atoms/button/button.twig" with {
+          label: link.content,
+          modifier: "button-with-icon icon--arrow-right icon-after",
+          src_url: link.url,
+          src_target: link.target,
+          } %}
         {% endif %}
-
       </div>
     </div>
 
     {% if fields %}
-      <div class="listing-card__fields body-text py-8 px-32 bg-skyblue">
+      <div class="listing-card__fields body-text py-8 bg-skyblue d-flex">
         {% for field in fields %}
-          <div class="listing-card__field">
-            <strong>
-              {{ field.label }}
-              :
-            </strong>
-            {{ field.value }}
+          <div class="listing-card__field d-flex">
+            <strong>{{ field.label }}:</strong>{{ field.value }}
           </div>
         {% endfor %}
       </div>
