DGC-53: Updated date format for Session Archive.

--- a/web/themes/custom/govcon/components/templates/session-archive/session-archive.twig
+++ b/web/themes/custom/govcon/components/templates/session-archive/session-archive.twig
@@ -49,7 +49,7 @@
             {% if session_date_time.label %}
               <div class="session_group-content-item">
                 <span class="session_group-content_label">{{ session_date_time.label }}</span>
-                {{ session_date_time.value }}   
+                {{ session_date_time.value | date("D, m/d/Y - g:ia T")}}   
               </div>
             {% endif %}     
           </div>
