DGC-74: Created Announcement Detail Page Styling.

--- a/web/themes/custom/govcon/components/style.scss
+++ b/web/themes/custom/govcon/components/style.scss
@@ -2,3 +2,4 @@
 @use "@organisms/announcement-listing/announcement-listing.scss";
 @use "@organisms/header/header.scss";
 @use "@organisms/footer/footer.scss";
+@use "@templates/announcement/announcement.scss";
