DGC-74: Style library and mdx update.

--- a/web/themes/custom/govcon/components/templates/announcement/announcement.twig
+++ b/web/themes/custom/govcon/components/templates/announcement/announcement.twig
@@ -10,7 +10,7 @@
     </div>
     <div class="announcement_container-post_date announcement_content">
         <div class="announcement_content-item body-text">
-          <span class="announcement_content-label">{{ announcement_post_date.label }}</span>
+          <span class="announcement_content-label">{{ announcement_post_date.label }}:</span>
           {{ announcement_post_date.value }}
         </div>
       </div>
