--- a/web/themes/custom/govcon/templates/node/node--special-announcement.html.twig
+++ b/web/themes/custom/govcon/templates/node/node--special-announcement.html.twig
@@ -1,3 +1,5 @@
+{{ attach_library('govcon/announcement') }}
+
 {% include '@templates/announcement/announcement.twig' with {
   announcement_page_title: { value: label }, 
   announcement_description: { value: content.body },
