--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -19,6 +19,10 @@
     max-width: utility.$container-width;
     margin: 0 auto;
     padding-inline: 16px;
+
+    .wp-block-columns {
+      padding: 32px 0;
+    }
   }
 }
 
