DGC-53: Updated style and doc file as review.

--- a/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
+++ b/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
@@ -40,16 +40,12 @@
           padding: 4px 8px;
           background: map.get(color.$colors, "light");
           font-weight: 700;
-
-          &::after {
-            content: ":";
-          }
         }
       }
     }
 
     .session_label {
-      width: fit-content;
+      width: auto;
 
       span {
         background-color: map.get(color.$colors, "dark");
