--- a/web/themes/custom/govcon/templates/node/node--session-archive.html.twig
+++ b/web/themes/custom/govcon/templates/node/node--session-archive.html.twig
@@ -1,3 +1,4 @@
+{{ attach_library('govcon/session-archive') }}
 {% include '@templates/session-archive/session-archive.twig' with {
   session_page_title: { value: label },  
   session_video: { value: content.field_video },
