--- a/web/themes/custom/govcon/components/templates/announcement/announcement.twig
+++ b/web/themes/custom/govcon/components/templates/announcement/announcement.twig
@@ -11,7 +11,7 @@
     <div class="announcement_container-post_date announcement_content">
         <div class="announcement_content-item body-text">
           <span class="announcement_content-label">{{ announcement_post_date.label }}:</span>
-          {{ announcement_post_date.value }}
+          {{ announcement_post_date.value| date("F j, Y") }}
         </div>
       </div>
   </div>
