Inline Padding to 16px In Mobile Devices

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -26,6 +26,13 @@
   }
 }
 
+@include mixins.media-breakpoint-down(md) {
+  .gutenberg-container > div {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
+  }
+}
+
 .alignwide {
   max-width: utility.$container-wide;
 }
