--- a/web/themes/custom/govcon/components/organisms/announcement-listing/announcement-listing-demo.twig
+++ b/web/themes/custom/govcon/components/organisms/announcement-listing/announcement-listing-demo.twig
@@ -1,4 +1,4 @@
-<div class="wp-block-columns bg-primary p-32">
+<div class="wp-block-columns bg-primary announcement-listing-container p-32">
   <div class="wp-block-column" style="flex-basis:35%">
     {% include "./announcement-listing.twig" %}
   </div>
