DGC: 73 - Announcement Views (#53)
* Created Views Work In Progress

* Announcement Listing

* Added Listing View Block

* Updated SCSS and removed Files added classes in Views

* Updated All Announcement views

* Updated Featured Section with Block

* Updated the Features Section Pattern

* Libraries Fixed

* Updated the Listing Component

* Updated the View Mode

--- a/web/themes/custom/govcon/components/molecules/announcement-card/announcement-card.twig
+++ b/web/themes/custom/govcon/components/molecules/announcement-card/announcement-card.twig
@@ -2,21 +2,25 @@
   <h3 class="mb-4">
     {{ title }}
   </h3>
-  <p class="mb-0">
-    {{ date }}
-  </p>
+  {% if date %}
+    <p class="mb-0">
+      {{ date }}
+    </p>
+  {% endif %}
   <hr class="has-text-color has-primary-color has-primary-background-color has-background my-16" />
-  <p class="announcement-description">
-    {{ description }}
-  </p>
+  {% if description %}
+    <div class="announcement-description">
+      {{ description }}
+    </div>
+  {% endif %}
   {% if link %}
     {% set additional_classes = "" %}
 
     {% include "@atoms/button/button.twig" with {
-      link_url: link.url,
+      src_url: link.url,
       src_target: link.target,
       label: link.content,
-      modifier: "button-with-icon icon--arrow-right icon-after " ~ link.classes 
+      modifier: "button-with-icon icon--arrow-right icon-after text-cobalt " ~ link.classes 
     } %}
   {% endif %}
 </div>
