--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.twig
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.twig
@@ -18,17 +18,17 @@
         {% endif %}
 
         {% if description %}
-          <p class="listing-card__description">
+          <div class="listing-card__description">
             {{ description }}
-          </p>
+          </div>
         {% endif %}
 
         {% if cta %}
           {% include "@atoms/button/button.twig" with {
-          label: cta.content,
-          modifier: "button-with-icon icon--arrow-right icon-after",
-          src_url: cta.url,
-          src_target: cta.target,
+            label: cta.content,
+            modifier: "button-with-icon icon--arrow-right icon-after text-cobalt",
+            src_url: cta.url,
+            src_target: cta.target
           } %}
         {% endif %}
       </div>
