--- a/web/themes/custom/govcon/components/atoms/button/button.twig
+++ b/web/themes/custom/govcon/components/atoms/button/button.twig
@@ -1,18 +1,20 @@
 {#
   /**
-  * Available variables:
-  * - button - default button class for the button design
-  * - modifier - Add additional button classes based on Design primary or secondary
-  * - src_url - Source Link Url
-  * - src_target - Target Type
-  * - label - Button Label
-  */
+   * Button Component
+   *
+   * This template renders a button using the Link atom.
+   *
+   * Available variables & Class:
+   * - button: Default button class for base styling.
+   * - modifier: Additional button classes to modify the design (e.g., "primary", "secondary", "button-with-icon", "icon--arrow-right", "icon-after").
+   *
+   * Link atom variables:
+   * - link_url: The destination URL for the button.
+   * - link_target: Specifies how the link should be opened (e.g., "_self", "_blank").
+   * - link_content: The text or label displayed on the button.
+   */
 #}
 
- {% include "@atoms/link/link.twig" with {
-  link_url: src_url,
-  link_title: label,
-  link_target: src_target,
-  link_content: label,
+{% include "@atoms/link/link.twig" with {
   link_classes: ["button", modifier|default('')]
- } %}
+} %}
