--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -5,16 +5,17 @@
 .wp-block-columns {
   max-width: utility.$container-width;
   margin: 0 auto !important;
-  padding: 32px 16px;
+  padding: 32px 0px;
 
   @include mixins.media-breakpoint-up(md) {
+    padding: 32px 16px;
     &:not([class*=" "]) {
       gap: 16px;
     }
   }
 }
 
-.gutenberg-container > .wp-block-group {
+.gutenberg-container>.wp-block-group {
   &:not(.alignwide):not(.alignfull) {
     max-width: utility.$container-width;
     margin: 0 auto;
@@ -27,7 +28,7 @@
 }
 
 @include mixins.media-breakpoint-down(md) {
-  .gutenberg-container > div {
+  .gutenberg-container>div {
     padding-left: 16px !important;
     padding-right: 16px !important;
   }
@@ -45,7 +46,10 @@ main .wp-block-group:nth-child(1) {
   &:not(.alignwide):not(.alignfull) {
     max-width: utility.$container-width;
     margin: 0 auto;
-    padding-inline: 16px;
+
+    @include mixins.media-breakpoint-up(md) {
+      padding-inline: 16px;
+    }
   }
 }
 
@@ -107,7 +111,8 @@ html :where(.wp-block) {
     color: inherit
   }
 
-  ul, ol {
+  ul,
+  ol {
     padding-left: 32px;
     margin: 16px 0;
   }
@@ -137,4 +142,8 @@ html :where(.wp-block) {
       gap: 32px;
     }
   }
+}
+
+.is-vertical {
+  flex-direction: column;
 }
