--- a/web/themes/custom/govcon/components/molecules/announcement-card/announcement-card.twig
+++ b/web/themes/custom/govcon/components/molecules/announcement-card/announcement-card.twig
@@ -17,9 +17,9 @@
     {% set additional_classes = "" %}
 
     {% include "@atoms/button/button.twig" with {
-      src_url: link.url,
-      src_target: link.target,
-      label: link.content,
+      link_url: link.url,
+      link_target: link.target,
+      link_content: link.content,
       modifier: "button-with-icon icon--arrow-right icon-after text-cobalt " ~ link.classes 
     } %}
   {% endif %}
