--- a/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
+++ b/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
@@ -1,7 +1,6 @@
 @use '@atoms/colors/color.scss' as color;
 @use "sass:map";
 
-
 .session_archive {
   padding: 50px 0;
 
@@ -32,6 +31,10 @@
           a {
             text-decoration: none;
             color: map.get(color.$colors, "black");
+          }
+
+          .item-label {
+            margin-left: 0;
           }
         }
 
