DGC: 23 - Homepage & Layouting (#64)
* DGC: 23 - Homepage & Layouting

* Hide the background Image

* Updated Button, Header & Color Changes

* Updated Spacing & Formatted SCSS

* Updated Spacing & Padding

* Removed & from SCSS

* Added line Space

--- a/web/themes/custom/govcon/components/atoms/button/button.scss
+++ b/web/themes/custom/govcon/components/atoms/button/button.scss
@@ -51,6 +51,8 @@ a.button-with-icon,
   align-items: center;
   gap: 4px;
   color: color.$cobalt;
+  background-color: transparent;
+  box-shadow: none !important;
 
   &.icon--arrow-right.icon-after:after {
     font-size: 12px;
