--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -9,6 +9,7 @@
 
   @include mixins.media-breakpoint-up(md) {
     padding: 32px 16px;
+
     &:not([class*=" "]) {
       gap: 16px;
     }
@@ -146,4 +147,31 @@ html :where(.wp-block) {
 
 .is-vertical {
   flex-direction: column;
+}
+
+body.has-background-image {
+  background: linear-gradient(180deg, rgba(40, 90, 131, 0.9) 0%, #132B3F 100%), var(--background-image);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
+}
+
+@include mixins.media-breakpoint-down(md) {
+  body.has-background-image {
+    background-size: 325%;
+    background-position: top;
+    background-attachment: scroll;
+  }
+
+  .featured-section {
+    .wp-block-column:first-child {
+      margin: 0 -16px;
+
+      >.wp-block-group {
+        padding: 32px 16px !important;
+      }
+    }
+  }
 }
