--- a/web/themes/custom/govcon/components/organisms/header/header.scss
+++ b/web/themes/custom/govcon/components/organisms/header/header.scss
@@ -8,6 +8,26 @@ header {
   top: 0;
 }
 
+body {
+  &.has-background-image {
+    .site-header {
+      max-width: 1368px;
+      background: rgba(244, 250, 255, 0.6);
+      box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+      margin: 16px auto 0;
+
+      &.header-color {
+        background: rgb(165 185 200);
+      }
+
+      @include mixins.media-breakpoint-down(md) {
+        margin: 0 auto;
+      }
+    }
+  }
+}
+
 .site-header {
   background: color.$light;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
