--- a/web/themes/custom/govcon/components/organisms/footer/footer.twig
+++ b/web/themes/custom/govcon/components/organisms/footer/footer.twig
@@ -33,10 +33,7 @@
     </div>
     <div class="site__footer-container__text">
       <p class="footer_text">
-        Website Built and Supported by
-        <a href="https://www.digitalpolygon.com/">
-          Digital Polygon
-        </a>
+        Website Built and Supported by <a href="https://www.digitalpolygon.com/">Digital Polygon</a>
       </p>
     </div>
   </div>
