--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -1,30 +1,38 @@
 @use "@base/utilities.scss" as utility;
 @use "@base/mixins.scss" as mixins;
+@use '@atoms/colors/color.scss' as color;
+@use "sass:map";
 
 /* Gutenberg Layout Handling */
 .wp-block-columns {
-  max-width: utility.$container-width;
+  max-width: 1368px;
   margin: 0 auto !important;
   padding: 32px 0px;
 
   @include mixins.media-breakpoint-up(md) {
-    padding: 32px 16px;
-
     &:not([class*=" "]) {
       gap: 16px;
     }
   }
 }
 
-.gutenberg-container>.wp-block-group {
-  &:not(.alignwide):not(.alignfull) {
+.gutenberg-container {
+  > :not(.alignwide):not(.alignfull) {
     max-width: utility.$container-width;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     padding-inline: 16px;
 
     .wp-block-columns {
       padding: 32px 0;
     }
+  }
+
+  > :first-child {
+    padding-top: 32px;
+  }
+  > :last-child {
+    padding-bottom: 32px;
   }
 }
 
@@ -41,17 +49,6 @@
 
 .alignfull {
   max-width: utility.$container-fluid-width;
-}
-
-main .wp-block-group:nth-child(1) {
-  &:not(.alignwide):not(.alignfull) {
-    max-width: utility.$container-width;
-    margin: 0 auto;
-
-    @include mixins.media-breakpoint-up(md) {
-      padding-inline: 16px;
-    }
-  }
 }
 
 /* Buttons */
@@ -109,7 +106,11 @@ html :where(.wp-block) {
 .gutenberg-container,
 .editor-styles-wrapper {
   a {
-    color: inherit
+    color: inherit;
+
+    &:hover {
+      color: map.get(color.$colors, "indigo");
+    }
   }
 
   ul,
