--- a/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
+++ b/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
@@ -14,16 +14,16 @@
     &-description {
       padding: 20px 0;
     }
-    
+
     .session_group {
       padding: 5px 10px 12px;
       margin: 16px 0px 32px;
       border: 1px solid map.get(color.$colors, "gray");
-      border-radius: 0; 
+      border-radius: 0;
 
       &-content {
         margin: 15px 0;
-        
+
         &-item {
           display: flex;
           align-items: center;
@@ -31,6 +31,10 @@
           a {
             text-decoration: none;
             color: map.get(color.$colors, "black");
+
+            &:hover {
+              color: map.get(color.$colors, "indigo");
+            }
           }
 
           .item-label {
