DGC-84: Created user login reset styling (#72)
* DGC-84: Created user login reset styling.

* DGC-84: Updated active styling.

* DGC-84: Updated active tab styling.

* DGC-84: Fixed user login and tab styling.

* DGC-84: Update the genric styling.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -144,6 +144,12 @@ html :where(.wp-block) {
       gap: 32px;
     }
   }
+
+  a {
+    &:hover {
+      color: inherit;
+    }
+  }
 }
 
 .is-vertical {
