--- a/web/themes/custom/govcon/components/style.scss
+++ b/web/themes/custom/govcon/components/style.scss
@@ -1,3 +1,5 @@
 @use "./gutenberg/gutenberg-style.scss";
 @use "@organisms/header/header.scss";
 @use "@organisms/footer/footer.scss";
+@use "@base/user-login.scss";
+@use "@base/admin-tab.scss";
