DGC 52: Archive Session Listing (#67)
* Added View & Display Mode

* Added New Button, Updated Listing Card and Values Added

* Updated The Config

* Added Molecules and Design

* Layout Fixes

* Added Pager

* Identation & Formatting

* Fixed Active state and Input width

* Updated Items per Page

* Created Block & Updated Form

* DGC-52: Update the Archeive session listing.

* Updated Icons

* Fixed Fields Height

* Updated Icons & Sessionize Document

* removed config

* DGC-52: Update the alignment issue.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/atoms/icons/icons.scss
+++ b/web/themes/custom/govcon/components/atoms/icons/icons.scss
@@ -38,7 +38,7 @@ $uniqueid: string.unique-id();
     $char: '\e900';
   }
 
-  @if $filename ==chevron-right {
+  @if $filename ==chevron {
     $char: '\e902';
   }
 
@@ -66,6 +66,6 @@ $uniqueid: string.unique-id();
 $icons-values: (
   facebook: facebook,
   x: x,
-  chevron-right: chevron-right,
+  chevron: chevron,
   arrow-right: arrow-right
 );
