--- a/web/themes/custom/govcon/components/molecules/menu/menu.twig
+++ b/web/themes/custom/govcon/components/molecules/menu/menu.twig
@@ -29,7 +29,7 @@
          } %}
 
         {% if item.below %}
-          <span class="chevron-icon icon--chevron-right"></span>
+          <span class="chevron-icon icon--chevron"></span>
           <ul class="submenu dropdown-menu">
             {% for child in item.below %}
               <li class="submenu__item {{ child.in_active_trail ? 'active' : '' }} ">
