--- a/web/themes/custom/govcon/components/base/utilities.scss
+++ b/web/themes/custom/govcon/components/base/utilities.scss
@@ -95,6 +95,10 @@ $space-values: (
     padding-top: #{$space}px !important;
     padding-bottom: #{$space}px !important;
   }
+
+  .gap-#{$space} {
+    gap: #{$space}px;
+  }
 }
 
 // Auto margin classes
