--- a/web/themes/custom/govcon/components/molecules/menu/menu.scss
+++ b/web/themes/custom/govcon/components/molecules/menu/menu.scss
@@ -103,18 +103,17 @@ nav {
 
           .chevron-icon {
             display: inline-block;
-            width: 20px;
-            height: 20px;
+            font-size: 8px;
             background-size: contain;
             position: absolute;
             right: 10px;
             top: 55%;
-            transform: translateY(-50%) rotate(90deg);
+            transform: translateY(-50%);
             cursor: pointer;
           }
 
           &.open .chevron-icon {
-            transform: rotate(270deg);
+            transform: rotate(180deg);
             top: 0%;
           }
 
