--- a/web/themes/custom/govcon/components/molecules/menu/menu.scss
+++ b/web/themes/custom/govcon/components/molecules/menu/menu.scss
@@ -21,6 +21,7 @@ nav {
     li {
       position: relative;
       padding: 20px 0 36px;
+      transition: all 0.3s ease;
 
       &.has-below {
         position: relative;
@@ -91,6 +92,12 @@ nav {
         text-decoration: none !important;
       }
     }
+  }
+}
+
+.sticky-header {
+  nav.user-account-menu ul li {
+    padding-bottom: 16px;
   }
 }
 
